src/snapshots/rtc__tests__dec_base_dec_mode_render.snap
---
source: src/main.rs
expression: ta.backend()
---
"╭─────────────────────────────────╮     "
"│   + 4.9                         │     "
"│                        123.45000│     "
"│DEC (10)                      dec│     "
"╰─────────────────────────────────╯     "
"╭─────────────────────────────────╮     "
"│      0 1 2 3 4 5 6 7 8 9 .      │     "
"│            + - * / %            │     "
"│base => H:Hex O:Oct B:Bin        │     "
"│mode => I:int S:sci F:sigdig     │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│ESC: clear   ?: help      q: quit│     "
"╰─────────────────────────────────╯     "
"                                        "
