src/snapshots/rtc__tests__hex_base_int_mode_render.snap
---
source: src/main.rs
expression: ta.backend()
---
"╭─────────────────────────────────╮     "
"│                                 │     "
"│                               7b│     "
"│HEX (16)                      int│     "
"╰─────────────────────────────────╯     "
"╭─────────────────────────────────╮     "
"│ 0 1 2 3 4 5 6 7 8 9 a b c d e f │     "
"│            + - * / %            │     "
"│base =>  D: Dec  O: Oct  B: Bin  │     "
"│mode =>  A: dec  S: sci          │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│        q: quit ?: help          │     "
"╰─────────────────────────────────╯     "
"                                        "
