src/snapshots/rtc__tests__initial_render_app.snap
---
source: src/main.rs
expression: ta.backend()
---
"╭─────────────────────────────────╮     "
"│                                 │     "
"│                                0│     "
"│DEC (10)                      int│     "
"╰─────────────────────────────────╯     "
"╭─────────────────────────────────╮     "
"│       0 1 2 3 4 5 6 7 8 9       │     "
"│      + - * / %    & | < >       │     "
"│base => H:Hex O:Oct B:Bin        │     "
"│mode => A:dec S:sci              │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│ESC: clear   ?: help      q: quit│     "
"╰─────────────────────────────────╯     "
"                                        "
